--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 
 <body>
     <header>
+        <h1>What To Watch.ir</h1>
         <form id="form">
             <input type="text" id="search" class="search" placeholder="search">
         </form>
     </header>
+    <div id="tags">
+        <div class="tag">Action</div>
+        <div class="tag">Adventure</div>
+        <div class="tag">Comedy</div>
+        <div class="tag">Drama</div>
+    </div>
     <main id="main">
         <div class="movie">
             <img src="./images/mason-kimbarovsky-unsplash.jpg" alt="Image">
