--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@
                 </div>
             </div>
         </div>
+
     </main>
+    <div class="pagination">
+        <div class="page" id="prev">Previous Page</div>
+        <div class="current" id="current">1</div>
+        <div class="page" id="next">Next Page</div>
+
+    </div>
     <footer>
         <div>Developed by <a href="https://HesamMarshal.ir" target="_blank">Hesam Marshal</a></div>
     </footer>
